--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
     build: .
 #    secrets:
 #      - sops_age_key
+#   run `command` with gunicorn later
     command: >
       python manage.py runserver_plus 0.0.0.0:8000
       --cert-file /certs/server.pem
@@ -28,7 +29,7 @@ services:
     volumes:
       - ~/.sops.yaml:/root/.sops.yaml:ro
       - ~/.config/sops/age/keys.txt:/root/.config/sops/age/keys.txt:ro
-      - ../certs/:/certs:ro
+      - ../DevWorksTools/certs/:/certs:ro
     ports:
       - "8000:8000"
     depends_on:
