--- a/requirements.txt
+++ b/requirements.txt
@@ -1,71 +1,71 @@
-asgiref==3.9.1
-backports.tarfile==1.2.0
-bcrypt==4.0.1
+asgiref>=3.8.1
+backports.tarfile
+bcrypt
 build==1.3.0
-certifi==2025.8.3
-cffi==1.17.1
-charset-normalizer==3.4.3
+certifi>=2017.4.17
+cffi>=2.0.0
+charset-normalizer>=2,<4
 crispy-bootstrap5==2025.6
-cryptography==44.0.1
-defusedxml==0.7.1
+cryptography>=2.0
+defusedxml
 -e git+https://github.com/SamCzarski/DevWorksDjangoLib.git@9c7b21a58ebdfcdd89acb272a1678448358651a8#egg=DevWorksDjangoLib
-Django==5.2.5
-django-cors-headers==4.3.1
-django-crispy-forms==2.4
-django-csp==3.7
+Django>=4.2
+django-cors-headers
+django-crispy-forms
+django-csp
 django-encrypted-model-fields==0.6.5
-django-extensions==3.2.3
-django-filter==25.1
+django-extensions
+django-filter
 django-log-request-id==2.1.0
 django-password-validators==1.7.3
 django-ratelimit==4.1.0
 django-redis==6.0.0
 django-simple-history==3.10.1
-djangorestframework==3.15.2
+djangorestframework
 djangorestframework-csv==3.0.2
-docutils==0.22
+docutils>=0.21.2
 gunicorn==23.0.0
-id==1.5.0
-idna==3.10
-importlib_metadata==8.7.0
-jaraco.classes==3.4.0
-jaraco.context==6.0.1
-jaraco.functools==4.3.0
-jeepney==0.9.0
+id
+idna>=2.5,<4
+importlib_metadata>=4.11.4
+jaraco.classes
+jaraco.context
+jaraco.functools
+jeepney>=0.6
 jwcrypto==1.5.6
-keyring==25.6.0
-markdown-it-py==4.0.0
-MarkupSafe==3.0.2
-mdurl==0.1.2
-more-itertools==10.8.0
-nh3==0.3.0
-oauthlib==3.3.1
-packaging==25.0
+keyring>=21.2.0
+markdown-it-py>=2.2.0
+MarkupSafe>=2.1.1
+mdurl~=0.1
+more-itertools
+nh3>=0.2.14
+oauthlib>=3.3.1
+packaging>=24.0
 PGPy==0.6.0
-psycopg2-binary==2.9.9
+psycopg2-binary
 pyasn1==0.6.1
-pycparser==2.22
-pydash==7.0.6
-Pygments==2.19.2
-PyJWT==2.8.0
-pyOpenSSL==25.1.0
-pyproject_hooks==1.2.0
-python-json-logger==3.3.0
-python3-openid==3.2.0
-PyYAML==6.0.2
-readme_renderer==44.0
-redis==6.4.0
-requests==2.32.2
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-rfc3986==2.0.0
-rich==14.1.0
-SecretStorage==3.4.0
-social-auth-app-django==5.5.1
-social-auth-core==4.7.0
-sqlparse==0.5.3
+pycparser
+pydash
+Pygments>=2.13.0,<3.0.0
+PyJWT>=2.10.1
+pyOpenSSL
+pyproject_hooks
+python-json-logger
+python3-openid>=3.2.0
+PyYAML
+readme_renderer>=35.0
+redis
+requests>=2.32.5,<3.0.0
+requests-oauthlib>=2.0.0
+requests-toolbelt>=0.8.0,!=0.9.0
+rfc3986>=1.4.0
+rich>=12.0.0
+SecretStorage>=3.2
+social-auth-app-django
+social-auth-core~=4.4
+sqlparse>=0.3.1
 twine==6.2.0
-typing_extensions==4.14.1
-urllib3==2.5.0
+typing_extensions
+urllib3>=1.21.1,<3
 Werkzeug==3.1.3
-zipp==3.23.0
+zipp>=3.20
